--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -16,20 +16,22 @@
         tools:layout_constraintRight_creator="1"
         android:layout_marginEnd="80dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="101dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="103dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="91dp" />
 
     <TextView
         android:id="@+id/ansText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="number of guesses"
-        tools:layout_constraintTop_creator="1"
         android:layout_marginStart="31dp"
         android:layout_marginTop="59dp"
+        android:text="number of guesses"
+        android:textAlignment="center"
+        app:layout_constraintLeft_toLeftOf="@+id/headerText"
         app:layout_constraintTop_toBottomOf="@+id/headerText"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/headerText" />
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/againBtn"
