--- a/app/src/main/res/layout/activity_guessing.xml
+++ b/app/src/main/res/layout/activity_guessing.xml
@@ -17,7 +17,8 @@
         android:layout_marginTop="16dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <EditText
         android:id="@+id/numEntry"
